--- a/Friends-of-Moby's.ipynb
+++ b/Friends-of-Moby's.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How to Extract a Social Network from a Novel?\n",
-    "This python code extracts an undirected network of characters from the novel _Moby-Dick_, based on the co-occurrence of names in a paragraph sequence. "
+    "### How to Extract a Social Network from a Novel\n",
+    "This python script extracts an undirected co-occurrence network of characters from the novel Moby-Dick (Herman Melville). "
    ]
   },
   {
